# DreamScribeAI

./: package-lock.json  package.json  pyproject.toml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: character-card.tsx  layout.tsx  scene-display.tsx  world-card.tsx
client/src/components/ui/: mobile-navbar.tsx  sidebar.tsx
client/src/lib/: gemini.ts
client/src/pages/: character-chat.tsx  characters.tsx  dashboard.tsx  scene-generator.tsx  world-detail.tsx  worlds.tsx
dreamscribe/: manage.py
dreamscribe/core/: context_processors.py  forms.py  gemini_api.py  models.py  mood_analyzer.py  urls.py  views.py  views_api.py
dreamscribe/core/migrations/: 0001_initial.py
dreamscribe/dreamscribe/: asgi.py  settings.py  urls.py  wsgi.py
dreamscribe/static/core/css/: mood-effects.css
dreamscribe/static/core/js/: mood_visualizer.js
dreamscribe/templates/: base.html
dreamscribe/templates/core/: character_chat.html  character_detail.html  character_list.html  scene_detail.html
dreamscribe/templates/core/components/: character_card.html
server/: ai.ts  routes.ts  storage.ts
shared/: schema.ts
