[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.1",
    "django-crispy-forms>=2.4",
    "django-tailwind>=4.0.1",
    "google-generativeai>=0.8.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]
